[package]
name = "rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
num = { version = "0.4.0", features = ["rand"] }
# num-traits = "0.2.14"
# num-primes  = "0.3.0"
# num-bigint-dig = { version = "0.8.0", features = ["prime"] }
rand = "0.8.4"