[package]
name = "rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
num = { version = "0.4.0", features = ["rand"] }
rand = "0.8.4"
lazy_static = "1.4.0"
clap = { version = "3", features = ["derive"] }